# HBRag

./: .env  .env.example  .gitignore  .ignore  .zipignore  AGENTS.md  CLAUDE.md  README.md  checkapi.py  context.md  docker-compose.yml  error.md  exclude.txt  guide.md  hbrag_slide_chunking_patch.diff  huybui.md  note.txt  pytest.py  question_answer.md  retrieval.md  review.md  structure.md  test.json
backend/: .env  .env.example  .gitignore  ADAPTIVE_SEMANTIC_CHUNKING_FIX.md  ADMIN_PRESENTATION_REGRESSION_FIX.md  CHUNKING_FIX_REPORT.md  CLAUDE.md  CONTENT_AWARE_CHUNKING_FIX.md  DOCLING_METADATA_CONSISTENCY_FIX.md  DOCLING_SLIDE_PIPELINE_REFACTOR.md  DOCLING_SLIDE_TEXT_QUALITY_FIX.md  FINAL_ADAPTIVE_SEMANTIC_CHUNKING_FIX.md  FINAL_TOKEN_SPLIT_ROOT_CAUSE_FIX.md  HBRag_backend_docling_v6_missing_greenlet_fix.patch  HBRag_backend_docling_v6_ruff_fix_git.patch  HBRag_chunking_fixes.patch  IMPLEMENTATION_REPORT.md  OPTIMIZATION_PROMPT.md  PLAN_DOCUMENT_SEARCH_UPGRADE.md  PYTEST_COMPATIBILITY_FIX.md  README_RAG_INGESTION.md  SERVICE_LEVEL_TOKEN_GUARD_FIX.md  SYSTEM_OVERVIEW.md  alembic.ini  cdm2026.pfx  chunking_config.yaml  clean_text.py  current_chunk_analysis.md  final_chunking_strategy.md  fix_doffice_metadata_preamble.py  fix_vietnamese_answer_language.py  hbrag_person_area_deterministic.patch  pyproject.toml  rag_technology_area_prompt_context_fix.patch  requirements.txt
backend/.claude/: CLAUDE.md
backend/.serena/: project.yml
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/config/: acl_bypass_users.txt  vi_synonyms.txt
(+482 files in other folders)
