[project]
name = "hbrag-backend"
version = "0.1.0"
description = "FastAPI backend for the HBRag project."
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.14.0",
    "anyio>=4.0.0",
    "asyncpg>=0.30.0",
    "bcrypt>=5.0.0",
    "docling>=2.61.2,<3.0.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "minio>=7.2.12",
    "neo4j>=5.23.1",
    "openai>=1.100.0",
    "pydantic-settings>=2.6.0",
    "pdfplumber>=0.11.0",
    "pypdf>=5.1.0",
    "python-docx>=1.1.2",
    "python-multipart>=0.0.20",
    "qdrant-client>=1.14.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "uvicorn[standard]>=0.32.0",
    "opendataloader-pdf>=2.4.7",
    "elasticsearch>=9.4.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.8.0",
]
memory = [
    "mem0ai>=0.1.0",
]
docproc = [
    "unstructured>=0.16.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*", "tests*"]

[tool.ruff]
line-length = 220
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]
